# XAI_Labs

./: .gitignore  README.md
activation_rate_lab/: README.md  plot.py  plot.sh  pyproject.toml  run.sh  run_quick.sh  rware_theories.json
activation_rate_lab/models/1001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/models/20001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/models/2001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/models/3001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/models/4001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/models/5001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/models/6001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/models/7001000/: agent.th  agent_opt.th  critic.th  critic_opt.th
activation_rate_lab/src/: main.py  run.py
activation_rate_lab/src/config/: default.yaml
activation_rate_lab/src/config/algs/: mappo.yaml
activation_rate_lab/src/envs/: gymma.py  multiagentenv.py
activation_rate_lab/src/runners/: helpers.py  parallel_runner.py
asp_lab/: rocksample.lp  verify_plan.py
assignments/: PORTFOLIO.md  README.md  WHERE_TO_RUN.md  build_presentation.py  collect_portfolio.py  export_metrics_tables.py  run.ps1  run_assignment.py  run_lab6.py  run_lab7.py  run_lab8.py  test_activation_rate.py
causal_lab/: README.md  anomaly_detection.py  forecast.py  tigramite_tutorial_assumptions.ipynb  tigramite_tutorial_prediction.ipynb
nesy_distributional/: base_config.py  product_config.py  (+1 more)
(+69 files in other folders)
